[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["artxnv <artxnv@gmail.com>"]
readme = "README.md"
packages = [{ include = "page_analyzer" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
flask = "^3.0"
gunicorn = "^20.1.0"
python-dotenv = "^0.20.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
psycopg2-binary = "^2.9"
validators = "^0.18.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
